prql-compiler/tests/integration/snapshots/integration__sql_examples@pipelines.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "prql_compiler::compile(&fs::read_to_string(path).unwrap(),\n        &Options::default()).unwrap()"
input_file: prql-compiler/tests/integration/queries/pipelines.prql
---
SELECT
  album_id BETWEEN 5 AND 10 AS is_in_range,
  track_id
FROM
  tracks
ORDER BY
  track_id
LIMIT
  6 OFFSET 19

-- Generated by PRQL compiler version:0.7.1 (https://prql-lang.org)

