prql-compiler/tests/integration/snapshots/integration__sql_examples@set_ops_remove.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "prql_compiler::compile(&fs::read_to_string(path).unwrap(),\n        &Options::default()).unwrap()"
input_file: prql-compiler/tests/integration/queries/set_ops_remove.prql
---
WITH table_0 AS (
  SELECT
    1 AS a
  UNION
  ALL
  SELECT
    2 AS a
  UNION
  ALL
  SELECT
    2 AS a
  UNION
  ALL
  SELECT
    3 AS a
),
table_1 AS (
  SELECT
    1 AS a
  UNION
  ALL
  SELECT
    2 AS a
)
SELECT
  a
FROM
  table_0 AS table_2
EXCEPT
  DISTINCT
SELECT
  *
FROM
  table_1 AS table_3

-- Generated by PRQL compiler version:0.7.1 (https://prql-lang.org)

