prql-compiler/tests/integration/snapshots/integration__sql_examples@switch.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "prql_compiler::compile(&fs::read_to_string(path).unwrap(),\n        &Options::default()).unwrap()"
input_file: prql-compiler/tests/integration/queries/switch.prql
---
SELECT
  CASE
    WHEN composer IS NOT NULL THEN composer
    WHEN genre_id < 17 THEN 'no composer'
    ELSE CONCAT('unknown composer')
  END AS display,
  milliseconds
FROM
  tracks
ORDER BY
  milliseconds
LIMIT
  10

-- Generated by PRQL compiler version:0.7.1 (https://prql-lang.org)

